# bitrix-autouser

./: .env.example  .gitignore  README.md  build.py  deploy.bat  deploy.sh  main.py  pyproject.toml
cli/: interactive.py
core/: config.py  logger.py  paths.py  utils.py
services/: bitrix.py  helpdesk.py  mail.py
